# gview

./: .gitignore  CMakeLists.txt  autoformat.sh  view.cc
include/: Bezier.hh  BooleanTree.hh  ColorConfig.hh  CustomWidgets.hh  General.hh  LineCollection.hh  Navigator.hh  Nursery.hh  Octree.hh  Overview.hh  RenderGraph.hh  RenderTask.hh  RenderWidget.hh  RenderWorker.hh  Shaders.hh  TrackData.hh  VectorTrace.hh  VectorWindow.hh  Viewer.hh
src/: Bezier.cc  BooleanTree.cc  ColorConfig.cc  CustomWidgets.cc  General.cc  LineCollection.cc  Navigator.cc  Nursery.cc  Octree.cc  Overview.cc  RenderGraph.cc  RenderTask.cc  RenderWidget.cc  RenderWorker.cc  Shaders.cc  TrackData.cc  VectorTrace.cc  VectorWindow.cc  Viewer.cc
